Majority of the project CSS requirements.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>LAYOUT</title>
     <link rel="stylesheet" href="./style.css">
   </head>
-  <body>
 
+  <body>
     <div class="header">
-      <a href="index.html">Logo</a>
-      <ul class="lniks">
+      <a class="logo" href="index.html">Logo</a>
+      <ul class="links">
         <li><a href="#">Link 1</a></li>
         <li><a href="#">Link 2</a></li>
         <li><a href="#">Link 3</a></li>
@@ -21,7 +21,7 @@
     <div class="body">
       <div class="hero">
         <div class="hero-left">
-          <h1>Unbelievable claim</h1>
+          <h1>Dubious claim</h1>
           <p>Why you should totally believe the heading, and provide your contact information so you can get spammed.</p>
           <button class="sign-up hero-button">Get spammed!</button>
         </div>
@@ -29,17 +29,30 @@
       </div>
 
       <div class="support">
-        <div class="reasons"></div>
-        <div class="quote"></div>
+        <div class="reasons">
+          <h2>Garbage reasons to sign up.</h2>
+          <div class="reasons-card">
+            <div class="reason-1">Stock vector image</div>
+            <div class="reason-2">Stock vector image2</div>
+            <div class="reason-3">???</div>
+            <div class="reason-4">Profit</div>
+          </div>
+        </div>
+        <div class="quote">
+          <p class="words">Wow, bigly quote</p>
+          <p>-Imaginary friend</p>
+        </div>
       </div>
 
       <div class="cta">
-          <div class="cta-text">
-            <h3>Click the button!</h3>
-            <p>Embrace our constant marketing emails!</p>
+        <div class="cta-card">
+            <div class="cta-text">
+              <h3>Click the button!</h3>
+              <p>Embrace our constant marketing emails!</p>
+            </div>
+            <button class="sign-up cta-button">Get spammed!</button>
           </div>
-          <button class="sign-up cta-button">Get spammed!</button>
-        </div>
+        </div>  
       </div>  
     </div>
     
