Achieved desired hero layout

--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
   </head>
 
   <body>
-    <div class="header">
-      <a class="logo" href="index.html">Logo</a>
-      <ul class="links">
-        <li><a href="#">Link 1</a></li>
-        <li><a href="#">Link 2</a></li>
-        <li><a href="#">Link 3</a></li>
-      </ul>
-    </div>
-
-    <div class="body">
+    <div class="hero-header">
+      <div class="header">
+        <a class="logo" href="index.html">Logo</a>
+        <ul class="links">
+          <li><a href="#">Link 1</a></li>
+          <li><a href="#">Link 2</a></li>
+          <li><a href="#">Link 3</a></li>
+        </ul>
+      </div>
       <div class="hero">
         <div class="hero-left">
           <h1>Dubious claim</h1>
@@ -27,7 +26,9 @@
         </div>
         <img class="hero-right"  src="./logo.jpg" alt="Stock image of a satisfied customer.">
       </div>
+    </div>
 
+    <div class="body">
       <div class="support">
         <div class="reasons">
           <h2>Garbage reasons to sign up.</h2>
@@ -51,10 +52,9 @@
               <p>Embrace our constant marketing emails!</p>
             </div>
             <button class="sign-up cta-button">Get spammed!</button>
-          </div>
-        </div>  
+        </div>
       </div>  
-    </div>
+    </div>  
     
     <div class="footer">
       <span class="copyright">Copyright © Calvo 2023</span>
