Layout completed and content filled out.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <p>Why you should totally believe the heading, and provide your contact information so you can get spammed.</p>
           <button class="sign-up hero-button">Get spammed!</button>
         </div>
-        <img class="hero-right"  src="./logo.jpg" alt="Stock image of a satisfied customer.">
+        <img class="hero-right"  src="https://images.pexels.com/photos/6289065/pexels-photo-6289065.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="https://www.pexels.com/@gabby-k/">
       </div>
     </div>
 
@@ -32,16 +32,18 @@
       <div class="support">
         <div class="reasons">
           <h2>Garbage reasons to sign up.</h2>
-          <div class="reasons-card">
-            <div class="reason-1">Stock vector image</div>
-            <div class="reason-2">Stock vector image2</div>
-            <div class="reason-3">???</div>
-            <div class="reason-4">Profit</div>
-          </div>
+          <ul class="reasons-card">
+            <li><a href="#"><img src="https://images.pexels.com/photos/416405/pexels-photo-416405.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="https://www.pexels.com/@pixabay/">Step1</a></li>
+            <li><a href="#"><img src="https://images.pexels.com/photos/834892/pexels-photo-834892.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="https://www.pexels.com/@jeshoots-com-147458/">Step2</a></li>
+            <li><a href="#"><img src="https://images.pexels.com/photos/5428833/pexels-photo-5428833.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="https://www.pexels.com/@leeloothefirst/">???</a></li>
+            <li><a href="#"><img src="https://images.pexels.com/photos/3171837/pexels-photo-3171837.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="https://www.pexels.com/@cottonbro/">Profit</a></li>
+          </ul>
         </div>
         <div class="quote">
-          <p class="words">Wow, bigly quote</p>
-          <p>-Imaginary friend</p>
+          <div class="quote-box">
+            <p class="words">"You know, if you’re a conservative Republican, if I were a liberal, if, like, OK, if I ran as a liberal Democrat, they would say I'm one of the smartest people anywhere in the world — it’s true! — but when you're a conservative Republican they try — oh, do they do a number"</p>
+            <p class="person">-Donald J. Trump</p>
+          </div>
         </div>
       </div>
 
