Flexing issues resolved.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
       <div class="hero">
         <div class="hero-left">
           <h1>Dubious claim</h1>
-          <p>Why you should totally believe the heading, and provide your contact information so you can get spammed.</p>
-          <button class="sign-up hero-button">Get spammed!</button>
+          <p>Why you should totally believe the heading, and give us your contact information.</p>
+          <button class="sign-up hero-button"><a href="#">Get spammed!</a></button>
         </div>
-        <img class="hero-right"  src="https://images.pexels.com/photos/6289065/pexels-photo-6289065.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="https://www.pexels.com/@gabby-k/">
+        <div class="hero-right">
+          <img src="https://images.pexels.com/photos/6289065/pexels-photo-6289065.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="https://www.pexels.com/@gabby-k/">
+        </div>
       </div>
     </div>
 
@@ -53,7 +55,7 @@
               <h3>Click the button!</h3>
               <p>Embrace our constant marketing emails!</p>
             </div>
-            <button class="sign-up cta-button">Get spammed!</button>
+            <button class="sign-up cta-button"><a href="#">Get spammed!</a></button>
         </div>
       </div>  
     </div>  
